[gd_scene load_steps=17 format=3 uid="uid://d27pigditchjt"]

[ext_resource type="Script" path="res://scripts/chap1.gd" id="1_2u1h5"]
[ext_resource type="Theme" uid="uid://d3d5s6pmjbo6w" path="res://GameTheme.tres" id="2_lmhm8"]
[ext_resource type="Texture2D" uid="uid://d0rjsus7uj8is" path="res://asset/images/correct.png" id="3_oa73i"]
[ext_resource type="PackedScene" uid="uid://bcynnyovi42rx" path="res://button_icon.tscn" id="4_inhih"]
[ext_resource type="Texture2D" uid="uid://bpbr57w6uti31" path="res://asset/images/escola/icons8-brocha-de-pintura-64.png" id="5_rbx7y"]
[ext_resource type="AudioStream" uid="uid://bp5n6jrrxuhn" path="res://asset/sounds/escola/pinceau.mp3" id="6_kjwj7"]
[ext_resource type="AudioStream" uid="uid://ds0jtqv63c51d" path="res://asset/sounds/escola/cahier.mp3" id="7_barh7"]
[ext_resource type="Texture2D" uid="uid://b14i82xc5qgtk" path="res://asset/images/escola/icons8-caderno-64.png" id="8_wu75x"]
[ext_resource type="Texture2D" uid="uid://ddtyy2hvulpmq" path="res://asset/images/escola/icons8-cola-64.png" id="9_rrbvx"]
[ext_resource type="AudioStream" uid="uid://bgstjhxj54b7n" path="res://asset/sounds/escola/colle.mp3" id="10_fbsio"]
[ext_resource type="Texture2D" uid="uid://d0batmpj4qwi2" path="res://asset/images/escola/icons8-mesa-100.png" id="11_2jgro"]
[ext_resource type="AudioStream" uid="uid://dpbtgpjhgaswh" path="res://asset/sounds/escola/table.mp3" id="12_yvm30"]
[ext_resource type="Texture2D" uid="uid://dvgv8qliqvcmj" path="res://asset/images/incorrect.png" id="13_usp1t"]

[sub_resource type="Animation" id="Animation_fw2h7"]
resource_name = "correct"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fundo/MarginContainer/fundo2/ResultIconCorrect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fundo/MarginContainer/fundo2/ResultIconCorrect:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_oa73i")]
}

[sub_resource type="Animation" id="Animation_jfp64"]
resource_name = "incorrect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fundo/MarginContainer/fundo2/ResultIconCorrect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fundo/MarginContainer/fundo2/ResultIconCorrect:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("13_usp1t")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7bntc"]
_data = {
"correct": SubResource("Animation_fw2h7"),
"incorrect": SubResource("Animation_jfp64")
}

[node name="chapter2" type="CanvasLayer"]
script = ExtResource("1_2u1h5")

[node name="fundo" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lmhm8")
color = Color(0.0196078, 0.0117647, 0.121569, 1)

[node name="MarginContainer" type="MarginContainer" parent="fundo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="fundo2" type="ColorRect" parent="fundo/MarginContainer"]
layout_mode = 2
color = Color(0.0588235, 0.0392157, 0.231373, 1)

[node name="ResultIconCorrect" type="TextureRect" parent="fundo/MarginContainer/fundo2"]
visible = false
layout_mode = 2
offset_left = 514.0
offset_top = 284.5
offset_right = 608.0
offset_bottom = 378.5
size_flags_horizontal = 4
texture = ExtResource("3_oa73i")

[node name="MarginContainer" type="MarginContainer" parent="fundo/MarginContainer/fundo2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="fundo/MarginContainer/fundo2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 115

[node name="lblTitle" type="Label" parent="fundo/MarginContainer/fundo2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "clique na palavra e escolhe a imagem que corresponde"
horizontal_alignment = 1

[node name="BtnWord_to_find" type="Button" parent="fundo/MarginContainer/fundo2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 61
text = "nova palavra"

[node name="GridContainer" type="GridContainer" parent="fundo/MarginContainer/fundo2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 90
columns = 4

[node name="ButtonIcon1" parent="fundo/MarginContainer/fundo2/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource("4_inhih")]
layout_mode = 2
icon = ExtResource("5_rbx7y")
btn_sound = ExtResource("6_kjwj7")
btn_icon = ExtResource("5_rbx7y")

[node name="ButtonIcon2" parent="fundo/MarginContainer/fundo2/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource("4_inhih")]
layout_mode = 2
btn_sound = ExtResource("7_barh7")
btn_icon = ExtResource("8_wu75x")

[node name="ButtonIcon3" parent="fundo/MarginContainer/fundo2/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource("4_inhih")]
layout_mode = 2
icon = ExtResource("9_rrbvx")
btn_sound = ExtResource("10_fbsio")
btn_icon = ExtResource("9_rrbvx")

[node name="ButtonIcon4" parent="fundo/MarginContainer/fundo2/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource("4_inhih")]
layout_mode = 2
icon = ExtResource("11_2jgro")
btn_sound = ExtResource("12_yvm30")
btn_icon = ExtResource("11_2jgro")

[node name="BottomContainer" type="HBoxContainer" parent="fundo/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 945
alignment = 2

[node name="BtnPrevious" type="Button" parent="fundo/MarginContainer/BottomContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "<="

[node name="BtnNext" type="Button" parent="fundo/MarginContainer/BottomContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "=>"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioResult" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7bntc")
}

[connection signal="pressed" from="fundo/MarginContainer/fundo2/MarginContainer/VBoxContainer/BtnWord_to_find" to="." method="_on_btn_word_to_find_pressed"]
[connection signal="pressed" from="fundo/MarginContainer/BottomContainer/BtnPrevious" to="." method="_on_btn_previous_pressed"]
[connection signal="pressed" from="fundo/MarginContainer/BottomContainer/BtnNext" to="." method="_on_btn_next_pressed"]
